--- a/requirements-ansible.yml
+++ b/requirements-ansible.yml
@@ -2,6 +2,8 @@
 collections:
   - name: cisco.ios
   - name: cisco.iosxr
-  - name: juniper.device  
+  # - name: juniper.device  
   - name: junipernetworks.junos
   - name: networktocode.nautobot  
+roles:
+  - name: Juniper.junos
